@@ -60,6 +60,6 @@
          "web" : "https://github.com/fayland/perl-WWW-ShipStation"
       }
    },
-   "version" : "0.03"
+   "version" : "0.04"
 }
 
